--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,15 @@
 Package: lab06
 Type: Package
-Title: What the Package Does (Title Case)
+Title: lab06
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Authors@R: c(
+        person("Mohammed","Bakheet",email="mohba508@student.liu.se",role=c("aut","cre")),
+        person("Mudith","Chathuranga",email="kogsi273@student.liu.se",role=c("aut")),
+        person("Nikodimos","Gezahegn",email="nikge687@student.liu.se",role=c("aut")))
+Maintainer: <mohba508@student.liu.se>
+Description: package applying Application Programming Interfaces (APIs).
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.1.1
+Depends: R (>= 2.10)
