--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,5 +15,6 @@ RoxygenNote: 6.1.1
 Depends: R (>= 2.10)
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat
 VignetteBuilder: knitr
