--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 language: r
 cache: packages
+r:
+  - oldrel
+  - release
+  - devel
+addons:
+  apt:
+    packages:
+      - lineprof
 r_packages:
   - lineprof
