--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,10 +13,11 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Depends: R (>= 2.10)
+Imports: 
+    parallel,
+    profvis
 Suggests: 
     knitr,
     rmarkdown,
-    testthat,
-    parallel,
-    profvis
+    testthat
 VignetteBuilder: knitr
